--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400&display=swap');
 
-
 body {
   font-family: 'Manrope', Arial, sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f8f9fa;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-background {
   background-image: url('./assets/trail-home.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
 }
 
 .App {
